# bhmie

./: .gitignore  .gitmodules  LICENSE  Makefile.in  README  README.md  configure  configure.ac
bhmie/: Makefile  Makefile.in  README  configure  configure.ac  example.in
bhmie/data/: README  grap-par  grap-per  graphite_par_d03_0.10  graphite_par_ld93  graphite_per_d03_0.01  graphite_per_d03_0.10  graphite_per_ld93  silicate  silicate_ld93
bhmie/examples/kmh94/: kmh94_3.1.in
bhmie/examples/mrn77/: README
bhmie/src/: bhmie.f90  bhmie_caller.f90  distributions.f90  main.f90  material.f90  types.f90
data/: graphite_par_d03_0.01
examples/kmh94/: README  kmh94_3.1.in  kmh94_3.1.summary  size_graphite_3.1
examples/kmh94_full/: README  kmh94_3.1_full.in  size_silicate_3.1
examples/kmh94_full/kmh94_3.1_full/: kmh94_3.1_full.alb  kmh94_3.1_full.chi  kmh94_3.1_full.f11  kmh94_3.1_full.f12  kmh94_3.1_full.f33  kmh94_3.1_full.f34  kmh94_3.1_full.g  kmh94_3.1_full.mu
examples/kmh94_ped/: README  kmh94_3.1_ped.in  kmh94_3.1_ped.summary
examples/mrn77/: mrn77.in  mrn77.summary
examples/ri-data/: silicate_d03
models/d03/: README  compare.py  d03_3.1_6.0_A.in  d03_3.1_6.0_A.orig  d03_4.0_4.0_A.in  d03_4.0_4.0_A.orig  d03_5.5_3.0_A.in  d03_5.5_3.0_A.orig
models/wd01/: README  plot_distributions.py
models/wd01/sizes/: .gitignore
original/: bhmie.f
src/: bhmie.f90  bhmie_caller.f90  distributions.f90  main.f90  material.f90
wd01/: compute_distributions.py
wd01/data/: table_1
wd01/plots/: .gitignore
